[package]
name = "osm-nsw"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
zip = "1.1.2"
log = "0.4.21"
dotenvy = "0.15.7"
geo = "0.28.0"
geojson = "0.24.1"
proj = {  version = "0.27.2", features = ["geo-types"] }
geo-types = "0.7.13"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2.18"
anyhow = "1.0.82"
governor = "0.6.3"
nonzero_ext = "0.3.0"
url = { version = "2.5.0", features = ["serde"] }
futures = "0.3.30"
tokio-util = {  version = "0.7.10", features = ["futures-io", "futures-util", "io-util"] }
tempfile = "3.10.1"
serde_repr = "0.1.19"
config = "0.14.0"
chrono = { version = "0.4.38", features = ["serde"] }
logos = "0.14.0"
derive_more = { version = "=1.0.0-beta.6", features = ["full"] }

[dev-dependencies]
serde_test = "1.0"
serde_json = "1"
